Fixing responsive layout for login/signup on mobile

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -86,7 +86,7 @@ input {
   background-color: black;
   // border: 1px solid red;
   height: 100%;
-  padding: 0 220px;
+  // padding: 0 220px;
 }
 
 .highlighted {
